fix contrast

--- a/src/Styles/contact.css
+++ b/src/Styles/contact.css
@@ -1,125 +1,124 @@
 .contact-container {
-	background-color: #AD59591C;
-	padding: 2em .8em;
+  background-color: #ad59591c;
+  padding: 2em 0.8em;
 }
 
 .lets-talk {
-	font-size: 2.5vmax;
-	font-weight: 500;
-	margin-bottom: 1em;
-	color: #e45250;
+  font-size: 2.5vmax;
+  font-weight: 500;
+  margin-bottom: 1em;
+  color: #e45250;
 }
 
 .contact-form {
-	display: flex;
-	flex-direction: column;
-	width: 50%;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
 }
 
 .form-group label {
-	font-size: .8em;
-	/* font-family: 'Comfortaa', serif; */
+  font-size: 0.8em;
+  /* font-family: 'Comfortaa', serif; */
 }
 
 .text-field {
-	margin: .3em 0;
-	padding: 1em .5em;
-	border: none;
+  margin: 0.3em 0;
+  padding: 1em 0.5em;
+  border: none;
 }
 
 #text-area {
-	height: 10em;
-	width: 100%;
+  height: 10em;
+  width: 100%;
 }
 
 ::placeholder {
-	font-family: "Playfair Display", sans-serif;
-	color: #e45250;
+  font-family: "Playfair Display", sans-serif;
+  color: #e45250;
 }
 
 .contact-content {
-	margin: 0 auto;
-	display: flex;
-	flex-direction: row;
-	width: 100%;
-	justify-content: space-between;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .submit {
-	background-color: #e45250;
-	border: none;
-	color: white;
-	font-family: "Playfair Display", sans-serif;
-	padding: 1em .5em;
+  background-color: #9e2e3a;
+  border: none;
+  color: white;
+  font-family: "Playfair Display", sans-serif;
+  padding: 1em 0.5em;
 }
 
 .me-and-socials {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
 }
 
 .my-image {
-	max-width: 50%;
-	height: auto;
-	border-radius: 50%;
+  max-width: 50%;
+  height: auto;
+  border-radius: 50%;
 }
 
 .socials-container {
-	margin: 1em auto;
+  margin: 1em auto;
 }
 
 .socials-container img {
-	height: 20px;
-	width: 20px;
-	margin: 0 .5em;
+  height: 20px;
+  width: 20px;
+  margin: 0 0.5em;
 }
 
+@media screen and (min-width: 768px) {
+  .contact-container {
+    width: 100%;
+  }
 
-@media screen and (min-width:768px) {
-	.contact-container {
-		width: 100%;
-	}
+  .contact {
+    width: 70%;
+    margin: 2em auto;
+  }
 
-	.contact {
-		width: 70%;
-		margin: 2em auto;
-	}
+  .lets-talk {
+    font-size: 3.5vmin;
+  }
 
-	.lets-talk {
-		font-size: 3.5vmin;
-	}
+  .contact-form {
+    width: 50%;
+  }
 
-	.contact-form {
-		width: 50%;
-	}
+  ::placeholder {
+    font-size: 1.5em;
+  }
 
-	::placeholder {
-		font-size: 1.5em;
-	}
+  .contact-form input {
+    width: 97%;
+  }
 
-	.contact-form input {
-		width: 97%;
-	}
+  .text-field,
+  .submit {
+    margin: 1em 0;
+    border: none;
+    padding: 1em 0.5em;
+    width: 100%;
+  }
 
-	.text-field, .submit {
-		margin: 1em 0;
-		border: none;
-		padding: 1em .5em;
-		width: 100%;
-	}
+  #text-area {
+    width: 100%;
+    box-sizing: border-box;
+    margin-right: 1em;
+  }
 
-	#text-area {
-		width: 100%;
-		box-sizing: border-box;
-		margin-right: 1em;
-	}
-
-	.socials-container img {
-		height: 30px;
-		width: 30px;
-	}
-
+  .socials-container img {
+    height: 30px;
+    width: 30px;
+  }
 }
