--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -1,14 +1,14 @@
 footer {
-	color: #E88D8D;
-	font-size: .7em;
-	text-align: center;
-	margin: .5em auto;
+  color: #9e2e3a;
+  font-size: 0.7em;
+  text-align: center;
+  margin: 0.5em auto;
 }
 
-@media screen and (min-width:768px) {
-	footer {
-		font-size: 1em;
-		padding: 1em;
-		font-weight: 600;
-	}
+@media screen and (min-width: 768px) {
+  footer {
+    font-size: 1em;
+    padding: 1em;
+    font-weight: 600;
+  }
 }
